--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -5,6 +5,7 @@ WORKDIR /app
 
 COPY . ./
 
-RUN pip install -r requirements.txt
+# Install dependencies directly
+RUN pip install streamlit pandas numpy
 
 ENTRYPOINT ["streamlit", "run", "chef.py", "--server.port=8080", "--server.address=0.0.0.0"]
